[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/modules/module_manager.gd" type="Script" id=2]
[ext_resource path="res://scripts/modules/module_deflector.gd" type="Script" id=3]
[ext_resource path="res://scripts/modules/module_projectile.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.0295, 9.51585 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.0094, 10 )

[node name="Knife" type="RigidBody2D"]
contacts_reported = 4
contact_monitor = true
can_sleep = false
linear_damp = 0.4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0326738, 0.0623703 )
shape = SubResource( 1 )

[node name="Projectile" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Projectile"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Projectile/Area2D"]
position = Vector2( 0.481224, 0 )
shape = SubResource( 2 )

[node name="Deflector" type="Node2D" parent="."]
script = ExtResource( 3 )

[connection signal="body_entered" from="Projectile/Area2D" to="Projectile" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Projectile/Area2D" to="Projectile" method="_on_Area2D_body_exited"]
[connection signal="deflected" from="Deflector" to="Projectile" method="_on_Deflector_deflected"]
